--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'java'
     id 'com.google.cloud.tools.jib' version '2.5.0'
 }
-
+apply plugin: 'java'
 group = 'com.nodamu'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
